Project

General

Profile

Actions

Bug #18225

closed

MDS doesn't release memory after exceeding its cache size limit

Added by John Spray over 7 years ago. Updated over 7 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Category:
Performance/Resource Usage
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
MDS
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

In some circumstances the MDS may fail to enforce its own cache size limits. Because boost::pools are used for allocation, any excess memory consumption will never be freed.

http://marc.info/?l=ceph-devel&m=148153553526382&w=2

Actions #1

Updated by John Spray over 7 years ago

  • Status changed from New to Fix Under Review
Actions #2

Updated by John Spray over 7 years ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF